# vienna-secession-mcp

./: README.md  pyproject.toml
src/vienna_secession_mcp/: vienna_secession_mcp.py
